--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
       <div class="container">
 
         <div class="navbar-header">
-          <a href="{{ url_for('main.hello') }}" class = "navbar-brand"> Cloud </a>
+          <a href="{{ url_for('main.getDashboard') }}" class = "navbar-brand"> Cloud </a>
           <button class = "navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -30,23 +30,13 @@
         {% block login_block%}
         <div class="collapse navbar-collapse navHeaderCollapse">
           <ul class="nav navbar-nav navbar-right">
-              <li>
-                  <a href="{{url_for('main.hello')}}"> Home </a>
-              </li>
-             
               {% if "username" in session %}
-              <li>
-                <a href="{{url_for('data.getAlbums')}}"> My data </a>
-              </li>
               <li>
                 <a href="{{url_for('user.logout')}}"> Log out </a>
               </li>
               {% else %}
               <li>
                 <a href="{{url_for('user.login')}}"> Log in </a>
-              </li>
-              <li>
-                <a href="{{url_for('data.getAlbums')}}"> Public Data </a>
               </li>
               {% endif %} 
 
@@ -62,13 +52,6 @@
       {% block body %}{% endblock %}
     </div>
 
-    <div class = "wrapper">
-      <div class = "navbar navbar-default navbar-fixed-bottom">
-        <div class = "container">
-          <a href = "{{ url_for('main.hello') }}" class = "navbar-btn btn-default btn pull-right "> Return to homepage </a>
-        </div>
-      </div>
-    </div>
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>  
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap.js') }}"></script>
